--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.27.3",
     "discord.js": "^13.6.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "string-similarity": "^4.0.4"
   }
 }
